--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,13 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-  width: 100%;
-  height: 100%;
-}
-
 body {
   color: black;
   background: white;
+}
+
+html,
+body {
+  font-family: "Alkarta", cursive;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+::-webkit-scrollbar-thumb {
+  width: 5px;
+  height: 5px;
+  background: gray;
+  border-radius: 30px;
+}
+
+.home-screen {
+  background-image: url(/images/bgImage.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
